@@ -3,6 +3,11 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
+2013-02-01 (SVN):
+    * utils hcc, dhcc: marked PR_ParseError() as noreturn. in dhcc,
+      changed opcode_t:priority type from float to int, commented out
+      the file and file_line members of function_t.
+
 2013-01-31 (SVN):
     * rename host_abortserver of h2 to host_abort, in line with h2w.
       tweak the setjmp() call in Host_Init(). style clean-up.
